@@ -167,6 +167,7 @@ struct VPreProcImp : public VPreProcOpaque {
 	m_lexp->m_keepComments = m_preprocp->keepComments();
 	m_lexp->m_keepWhitespace = m_preprocp->keepWhitespace();
 	m_lexp->m_pedantic = m_preprocp->pedantic();
+	m_lexp->m_synthesis = m_preprocp->synthesis();
 	m_lexp->debug(debug()>=10 ? debug() : 0);  // See also VPreProc::debug() method
     }
     ~VPreProcImp() {
