@@ -50,6 +50,7 @@ if (! GetOptions (
 					   );
 		      $opt_blank=0;
 		  } },
+	  	  "synthesis!"	=> sub { push @opt_pp_flags, (synthesis=>$_[1]); },
 		  "version"	=> sub { print "Version $VERSION\n"; exit(0); },
 		  "<>"		=> \&parameter,
 		  )) {
@@ -212,6 +213,14 @@ reference manual. Defaults false.
 =item --simple
 
 Requests simple output, an alias for --noline, --nocomment and --noblank.
+
+=item --sythesis
+
+Define SYNTHESIS, and ignore text bewteen "ambit", "pragma", "synopsys" or
+"synthesis" translate_off and translate_on meta comments.  Note using
+metacomments is discouraged as they have led to silicon bugs (versus ifdef
+SYNTHESIS); see
+L<http://www.veripool.org/papers/TenIPEdits_SNUGBos07_paper.pdf>.
 
 =item --version
 
